2002-09-21  Bart Veer  <bartv@ecoscentric.com>

	* common/common/build.cxx:
	Avoid const compatibility problems with Tcl 8.4

2002-08-12  Bart Veer  <bartv@ecoscentric.com>

	* standalone/win32/ReadMe:
	Move build instructions here from the toplevel

2002-08-03  Bart Veer  <bartv@ecoscentric.com>

	* standalone/common/Makefile.am, configure.in, acinclude.m4:
	Rework host-side autoconf support

	* common/common/build.cxx: fix typo
	
2002-02-08  Julian Smart <julians@redhat.com>

	* common/common/build.cxx: Added two missing backslashes

2002-02-07  Jonathan Larmour  <jlarmour@redhat.com>

	* common/common/build.cxx: correctly substitute forward slashes
	for backslashes.

2002-01-02  Julian Smart <julians@redhat.com>

    * Modified these files:

      host/tools/configtool/standalone/win32/Configtool.rc
      host/tools/configtool/standalone/win32/res/Splsh16.bmp 
      host/tools/configtool/standalone/win32/res/Splsh16_template.bmp 
      host/tools/configtool/standalone/wxwin/README.txt 
      host/tools/configtool/standalone/wxwin/about.htm 
      host/tools/configtool/standalone/wxwin/ecoslogosmall.png 
      host/tools/configtool/standalone/wxwin/reposdlg.cpp 
      host/tools/configtool/standalone/wxwin/bitmaps/splash16.bmp 
      host/tools/configtool/standalone/wxwin/bitmaps/splash16.png 
      host/tools/configtool/standalone/wxwin/setup/configtool.iss 
      host/tools/configtool/standalone/wxwin/setup/innobott.txt 
      host/tools/configtool/standalone/wxwin/setup/innotop.txt 

      incrementing the copyright year to 2002.

2001-12-03  Julian Smart <julians@redhat.com>

    * standalone/wxwin/templatesdlg.cpp: hardware is now sorted alphabetically
    on UNIX.

2001-10-25  Julian Smart <julians@redhat.com>

    * common/common/build.cxx: now generates /ecos-x names under Windows
    both compiling with Cygwin and VC++.

2001-09-13  Jonathan Larmour  <jlarmour@redhat.com>

	* common/common/build.cxx: Test for active properly in below change.
